<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.oneall.oneallsample.PostActivity"
    android:orientation="vertical">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:id="@+id/post_activity_text_link"
        android:hint="@string/post_activity_hint_link"
        android:text="@string/post_activity_default_link"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:id="@+id/post_activity_text_link_name"
        android:hint="@string/post_activity_hint_link_name"
        android:text="@string/post_activity_default_link_name"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:id="@+id/post_activity_text_link_caption"
        android:hint="@string/post_activity_hint_link_caption"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:id="@+id/post_activity_text_link_description"
        android:hint="@string/post_activity_hint_link_description"
        android:text="@string/post_activity_default_link_description"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:id="@+id/post_activity_text_picture"
        android:hint="@string/post_activity_hint_picture"
        android:text="@string/post_activity_default_picture"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:id="@+id/post_activity_text_video"
        android:hint="@string/post_activity_hint_video"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:id="@+id/post_activity_text_text"
        android:hint="@string/post_activity_hint_text"
        android:text="@string/post_activity_default_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/post_activity_button_post"
        android:layout_gravity="center"
        android:text="@string/post_activity_button_share"/>

</LinearLayout>
